applications/TaxSystem/bank-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-service
  namespace: taxsystem
  labels:
    app: bank-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-service
  template:
    metadata:
      labels:
        app: bank-service
    spec:
      containers:
        - name: bank-service
          image: ghcr.io/nicodm13/k8s-ansible-project/taxsystem-bank-service:9d62b5d229249809a432ee3168a9a2ca63846c6f
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: data
              mountPath: /var/lib/taxsystem
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: taxsystem-bank-data
---
apiVersion: v1
kind: Service
metadata:
  name: bank-service
  namespace: taxsystem
spec:
  selector:
    app: bank-service
  ports:
    - port: 80
      targetPort: 8080
