applications/TaxSystem/citizen-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: citizen-service
  namespace: taxsystem
  labels:
    app: citizen-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: citizen-service
  template:
    metadata:
      labels:
        app: citizen-service
    spec:
      containers:
        - name: citizen-service
          image: ghcr.io/nicodm13/k8s-ansible-project/taxsystem-citizen-service:9e85dfd44f52a449249b99c0a44ba77bd5f3e933
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: data
              mountPath: /var/lib/taxsystem
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: taxsystem-citizen-data
---
apiVersion: v1
kind: Service
metadata:
  name: citizen-service
  namespace: taxsystem
spec:
  selector:
    app: citizen-service
  ports:
    - port: 80
      targetPort: 8080
