applications/TaxSystem/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: taxsystem
  labels:
    app: client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
        workload-tier: taxsystem-app
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          nodeTaintsPolicy: Honor
          whenUnsatisfiable: DoNotSchedule
          matchLabelKeys:
            - pod-template-hash
          labelSelector:
            matchLabels:
              app: client
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          nodeTaintsPolicy: Honor
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              workload-tier: taxsystem-app
      containers:
        - name: client
          image: ghcr.io/nicodm13/k8s-ansible-project/taxsystem-client:91e28b1e5ab80d44171044e9048ca0b6912e0e8b
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 500Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: taxsystem
spec:
  selector:
    app: client
  ports:
    - port: 8080
      targetPort: 8080
