applications/TaxSystem/company-service.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: company-service
  namespace: taxsystem
  labels:
    app: company-service
spec:
  serviceName: company-service-headless
  replicas: 2
  selector:
    matchLabels:
      app: company-service
  template:
    metadata:
      labels:
        app: company-service
        workload-tier: taxsystem-app
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          nodeTaintsPolicy: Honor
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: company-service
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          nodeTaintsPolicy: Honor
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              workload-tier: taxsystem-app
      containers:
        - name: company-service
          image: ghcr.io/nicodm13/k8s-ansible-project/taxsystem-company-service:6c8c5c027d0dc8276a56e22a3a22edfa013dbdad
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 600Mi
          volumeMounts:
            - name: data
              mountPath: /var/lib/taxsystem
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: company-service
  namespace: taxsystem
spec:
  selector:
    app: company-service
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: company-service-headless
  namespace: taxsystem
spec:
  clusterIP: None
  selector:
    app: company-service
  ports:
    - port: 80
      targetPort: 8080
