applications/TaxSystem/statementgenerator-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statementgenerator-service
  namespace: taxsystem
  labels:
    app: statementgenerator-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: statementgenerator-service
  template:
    metadata:
      labels:
        app: statementgenerator-service
        workload-tier: taxsystem-app
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: statementgenerator-service
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              workload-tier: taxsystem-app
      containers:
        - name: statementgenerator-service
          image: ghcr.io/nicodm13/k8s-ansible-project/taxsystem-statementgenerator-service:fab71276f0b907e70c2bd669fcd43e2ad35602c4
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 128Mi
            limits:
              memory: 800Mi
          volumeMounts:
            - name: data
              mountPath: /var/lib/taxsystem
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: taxsystem-statement-data
---
apiVersion: v1
kind: Service
metadata:
  name: statementgenerator-service
  namespace: taxsystem
spec:
  selector:
    app: statementgenerator-service
  ports:
    - port: 80
      targetPort: 8080
