applications/TaxSystem/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client
  namespace: taxsystem
spec:
  ingressClassName: traefik
  rules:
    - host: taxsystem.kvikit.dk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 8080
